opam-version: "1.2"
name: "imandra-prelude"
version: "1.0.1"
maintainer: "Grant Passmore <grant@aestheticintegration.com>"
authors: "Grant Passmore <grant@aestheticintegration.com>"
homepage: "http://www.imandra.ai/"
bug-reports: "Grant Passmore <grant@aestheticintegration.com>"
license: "Apache 2"
dev-repo: "git+https://github.com/AestheticIntegration/imandra-prelude"
build: [["jbuilder" "build" "-p" name "-j" jobs]]
depends: [
  "jbuilder" {build}
  "zarith"
  "containers"
  ]

